--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -26,7 +26,8 @@ jobs:
         with:
           r-version: '4.0.3'
       - name: Install libcurl
-        run: sudo apt-get install libcurl4-openssl-dev
+        run: sudo apt-get install libcurl4-openssl-dev libssl-dev libicu-dev libxml2-dev
+      - uses: r-lib/actions/setup-pandoc@v1  
       - name: Install dependencies
         run: |
           install.packages(c("remotes","ggplot2","ggrepel","stringr","stringi","attempt","assertthat","nnet","mgcv","rlang","tibble","geosphere","glue","maps","janitor", "jsonlite","dplyr","purrr","arrow", "tidyr", "git2r"))
@@ -40,6 +41,12 @@ jobs:
           key: ${{ runner.os }}-renv-${{ hashFiles('**/renv.lock') }}
           restore-keys: |
             ${{ runner.os }}-renv-  
+      - name: Restore packages
+        shell: Rscript {0}
+        run: |
+          cran_repo <- c("CRAN" = Sys.getenv("CRAN_REPO"))
+          if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv", repos = cran_repo)
+          renv::restore(repos = cran_repo)      
       - name: Morning
         run: Rscript "week.R"
       - name: Commit files
