--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,16 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+df_player_stats_2014_2019.csv
+df_player_stats_2014_2020.csv
+df_team_rosters_2014_2019.csv
+df_team_rosters_2014_2020.csv
+NSH.jsonl
+raw_data/2014_2019_all_years_with_spread.csv
+raw_data/all_years_2014_2019_add_play.rds
+raw_data/all_years_2014_2019_clean_pbp.rds
+raw_data/all_years_2014_2019_penalty.rds
+raw_data/all_years_2014_2019_clean_drive.rds
+raw_data/all_years_spread_2014_2019.csv
+raw_data/all_years_spread_2014_2019.csv.gz
+raw_data/all_years_2014_2019_prep_epa.rds
